# ircamdir

./: CMakeLists.txt  README.md  build.sh  build_and_run.sh
src/: ListOfVulkanFunctions.inl  app-state-comp.h  battle-detect-sys.cpp  battle-detect-sys.h  broadcast-summary-sys.cpp  broadcast-summary-sys.h  cam-ctrl-comp.h  car-comp.h  closest-battle-director-sys.cpp  closest-battle-director-sys.h  console-kb-sys.cpp  console-kb-sys.h  ecs-util.h  gamepad-sys.cpp  gamepad-sys.h  gpad.cpp  head-of-direction-sys.cpp  head-of-direction-sys.h  ir2stdout.cpp  irsdk_utils.cpp  irsendmsg.cpp  irtelemetry-sys.cpp  irtelemetry-sys.h  llgame-main.cpp  screen-time-stats-sys.cpp  screen-time-stats-sys.h  session-comp.h  tui-sys.cpp  tui-sys.h  tv-point-director-sys.cpp  tv-point-director-sys.h  tv-point-selector-sys.cpp  tv-point-selector-sys.h  vulkan-loader.cpp  vulkan-loader.h  vulkan.h  window-sys.cpp  window-sys.h
src/components/: app-state-comp.h  cam-ctrl-comp.h  car-comp.h  session-comp.h
src/irsdk/: irsdk_client.cpp  irsdk_client.h
src/irsdk/examples/: ir2stdout.cpp  irsendmsg.cpp
src/systems/: broadcast-car-info-collector-sys.cpp  broadcast-car-info-collector-sys.h  broadcast-summary-sys.cpp  broadcast-summary-sys.h  closest-battle-director-sys.cpp  closest-battle-director-sys.h  console-kb-sys.cpp  console-kb-sys.h  gamepad-sys.cpp  gamepad-sys.h  head-of-direction-sys.cpp  head-of-direction-sys.h  incident-detector-system.cpp  incident-detector-system.h  irtelemetry-sys.cpp  irtelemetry-sys.h  overtake-detector-system.cpp  overtake-detector-system.h  screen-time-stats-sys.cpp  screen-time-stats-sys.h  tui-sys.cpp  tui-sys.h  tv-point-director-sys.cpp  tv-point-director-sys.h  window-sys.h
src/txt-view/: car-event-log-table.cpp  car-event-log-table.h  simple-label.cpp  simple-label.h  tv-driver-table.cpp  tv-driver-table.h
